fixed spacing

--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -147,6 +147,7 @@ h3 {
   align-items: center;
   padding: 0 48px;
   width: 80%;
+  max-width: 1200px;
 }
 
 /* Tablet and mobile styling */
